# ouroboros

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/tex/: axis_final_report.tex  axis_plan.tex  main.tex  research_plan.tex
scripts/: build_paper.py  debug_mask.py  generate_plots.py  inspect_columns.py  run_axis_directions.py  run_axis_validity.py  run_geo_pipeline.py  run_global_null.py  run_harmonics.py  run_harmonics_null.py  run_jackknife.py  run_mask_ladder.py  run_parity_pipeline.py  run_phase3_tomography.py  run_quasar_pipeline.py  run_separation_forensics.py  run_spectrum_check.py  run_variance_pipeline.py
src/ouroboros/: config.py  ingestion.py
src/ouroboros/engines/: geo.py  harmonics.py  parity.py  quasar.py
src/ouroboros/validation/: nulling.py  shuffling.py
tests/: test_geo.py  test_geometry.py  test_nulling.py  test_parity.py  test_quasar.py
