[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ouroboros"
version = "0.1.0"
description = "Phase II Research Protocol: Cosmological History Selection by Local Agency"
authors = [
  { name = "A. Hewitt", email = "alastair@ante-institute.org" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "astropy>=5.3.0",   # For coordinate frames (Solar/Ecliptic)
    "healpy>=1.16.0",   # For CMB map manipulation
    "tqdm>=4.65.0"      # For progress bars during Monte Carlo loops
]

[project.optional-dependencies]
dev = [
    "pytest",
    "jupyterlab",
    "black"
]
